--- a/meteorui/meteorui.html
+++ b/meteorui/meteorui.html
@@ -33,8 +33,8 @@
     <div class="col s12">
         <ul class="tabs">
             <li class="tab col s3"><a class="active" href="#test1">Search</a></li>
-           <li class="tab col s3"><a href="#test2">Slides</a></li>
-            <li class="tab col s3 disabled"><a  href="#test3">Charts</a></li>
+           <li class="tab col s3"><a href="#test2">Charts</a></li>
+            <li class="tab col s3 disabled"><a  href="#test3">Slides</a></li>
 
         </ul>
     </div>
@@ -48,10 +48,10 @@
     </div>
 
     <!-- Charts -->
-    <div id="test3" class="col s12">Test 3</div>
+    <div id="test2" class="col s12">Test 3</div>
 
     <!--  Slides -->
-    <div id="test2" class="col s12">
+    <div id="test3" class="col s12">
         <center>
             <br/>
 
